--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div class="content-section">
             <div class="Career-objective">
+                <h1>Static Interective Resume</h1>
                 <h2>Career Objective <i class="fa-solid fa-laptop-code"></i></h2>
                 <p>To become a world-class software developer with expertise in HTML, CSS, JavaScript and more.</p>
             </div>
